# emotions_classifier

./: .gitignore  model.pkl  pyproject.toml
RAG_model/: chunking.py  embbedings.py  loading_doc.py  main.py  promt.py  retrieval.py  save_embedings.py  vector_store.py
RAG_model/data/python-3.14-docs-html/python-3.14-docs-html/: .buildinfo  404.html  about.html  bugs.html  contents.html  copyright.html  download.html  genindex-A.html  genindex-B.html  genindex-C.html  genindex-D.html  genindex-E.html  genindex-F.html  genindex-G.html  genindex-H.html  genindex-I.html  genindex-J.html  genindex-K.html  genindex-L.html  genindex-M.html  genindex-N.html  genindex-O.html  genindex-P.html  genindex-Q.html  genindex-R.html  genindex-S.html  genindex-Symbols.html  genindex-T.html  genindex-U.html  genindex-V.html  genindex-W.html  genindex-X.html  genindex-Y.html  genindex-Z.html  genindex-_.html  genindex-all.html  genindex.html  glossary.html  improve-page-nojs.html  improve-page.html  (+5 more)
RAG_model/data/python-3.14-docs-html/python-3.14-docs-html/_static/: documentation_options.js  opensearch.xml
RAG_model/data/python-3.14-docs-html/python-3.14-docs-html/c-api/: abstract.html  allocation.html  apiabiversion.html  (+74 more)
emotions_classifier/: learning_model.py  model.pkl  model_big.pkl  model_claster.py  model_clasterv_v2.py  model_rfe.pkl  params.yaml  vectorize_pipeline.py
emotions_classifier/model/: learning_model.py  learning_model_with_optuna.py  learning_model_with_rfe_and_optuna.py  model_claster.py  params.yaml  realiz_fastapi_model.py  tokenizer.py  zapusk_model.py
(+122 files in other folders)
