[project]
name = "emotions_classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Djorj",email = "gosha.alksnis@gmail.com"}
]
license = "apache 2.0"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
