[project]
name = "emotions_classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Djorj",email = "gosha.alksnis@gmail.com"}
]
license = "apache 2.0"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "transformers (>=5.4.0,<6.0.0)",
    "huggingface-hub (>=1.8.0,<2.0.0)",
    "datasets (>=4.8.4,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
